--- a/jinjin-starter.html
+++ b/jinjin-starter.html
@@ -246,7 +246,7 @@
                     changeEggColor(pan, i, barHeight, barSpacing, topSpacing);
                 } else if(ace.checked){
                     changeEggColor(ace, i, barHeight, barSpacing, topSpacing);
-                else{
+                }else{
                     //default eggs
                     drawCtx.beginPath();
                     drawCtx.save();
