--- a/jinjin-starter.html
+++ b/jinjin-starter.html
@@ -142,6 +142,7 @@
             playButton.dispatchEvent(new MouseEvent("click"));
 			};
 
+            //Make it gay button click event
             document.querySelector("#makeGay").onclick = _ =>{
                 let trackSelect = document.querySelector("#trackSelect");
                 audioElement.src = "testAudio/bornThisWay.mp3";
