Added then deleted code for checkboxes

--- a/ella-starter.html
+++ b/ella-starter.html
@@ -481,8 +481,9 @@
                         <h3>Visual Effects</h3>
 
                         <!--INVERT-->
-                        <section class="checkbox">
+                        <section class="switch">
                             Invert: <input type="checkbox" id="invert">
+                            <span class="slider round"></span>
                         </section>
                         <!--SEPIA-->
                         <section class="checkbox">
