Changed css of radio buttons

--- a/ella-starter.html
+++ b/ella-starter.html
@@ -480,37 +480,37 @@
 
                 <!--INVERT-->
                 <div class="sliderLabel">
-                Invert:
-                <section class="onoffswitch">
-                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="invert">
-                    <label class="onoffswitch-label" for="invert">
+                    Invert:
+                    <section class="onoffswitch">
+                        <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="invert">
+                        <label class="onoffswitch-label" for="invert">
                         <span class="onoffswitch-inner"></span>
                         <span class="onoffswitch-switch"></span>
                     </label>
-                </section>
+                    </section>
                 </div>
                 <!--SEPIA-->
                 <div class="sliderLabel">
-                Sepia:
-                <section class="onoffswitch">
-                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="sepia">
-                    <label class="onoffswitch-label" for="sepia">
+                    Sepia:
+                    <section class="onoffswitch">
+                        <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="sepia">
+                        <label class="onoffswitch-label" for="sepia">
                         <span class="onoffswitch-inner"></span>
                         <span class="onoffswitch-switch"></span>
                     </label>
-                </section>
+                    </section>
                 </div>
 
                 <!--NOISE-->
                 <div class="sliderLabel">
-                Sepia:
-                <section class="onoffswitch">
-                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="noise">
-                    <label class="onoffswitch-label" for="noise">
+                    Sepia:
+                    <section class="onoffswitch">
+                        <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="noise">
+                        <label class="onoffswitch-label" for="noise">
                         <span class="onoffswitch-inner"></span>
                         <span class="onoffswitch-switch"></span>
                     </label>
-                </section>
+                    </section>
                 </div>
             </section>
 
@@ -520,22 +520,31 @@
                 <!--GAY-->
                 <section class="radio">
                     Gay: <input type="radio" name="pride" id="gay" value="gay">
+                    <span class="eggRadio"></span>
                 </section>
                 <!--LESBIAN-->
                 <section class="radio">
                     Lesbian: <input type="radio" name="pride" id="les" value="les">
+                    <span class="eggRadio"></span>
+
                 </section>
                 <!--BI-->
                 <section class="radio">
                     Bisexual: <input type="radio" name="pride" id="bi" value="bi">
+                    <span class="eggRadio"></span>
+
                 </section>
                 <!--PAN-->
                 <section class="radio">
                     Pansexual: <input type="radio" name="pride" id="pan" value="pan">
+                    <span class="eggRadio"></span>
+
                 </section>
                 <!--ACE-->
                 <section class="radio">
                     Asexual: <input type="radio" name="pride" id="ace" value="ace">
+                    <span class="eggRadio"></span>
+
                 </section>
 
                 <section>
