Trying to fix radio buttons

--- a/ella-starter.html
+++ b/ella-starter.html
@@ -519,31 +519,31 @@
                 <h3>Pride Colors</h3>
                 <!--GAY-->
                 <section class="radio">
-                    Gay: <input type="radio" name="pride" id="gay" value="gay">
-                    <span class="eggRadio"></span>
+                    Gay: <input type="radio" name="pride" id="gay" value="gay" checked="checked">
+                    <span class="eggRadio" for="gay"></span>
                 </section>
                 <!--LESBIAN-->
                 <section class="radio">
                     Lesbian: <input type="radio" name="pride" id="les" value="les">
-                    <span class="eggRadio"></span>
+                    <span class="eggRadio" for="les"></span>
 
                 </section>
                 <!--BI-->
                 <section class="radio">
                     Bisexual: <input type="radio" name="pride" id="bi" value="bi">
-                    <span class="eggRadio"></span>
+                    <span class="eggRadio" for="bi"></span>
 
                 </section>
                 <!--PAN-->
                 <section class="radio">
                     Pansexual: <input type="radio" name="pride" id="pan" value="pan">
-                    <span class="eggRadio"></span>
+                    <span class="eggRadio" for="pan"></span>
 
                 </section>
                 <!--ACE-->
                 <section class="radio">
                     Asexual: <input type="radio" name="pride" id="ace" value="ace">
-                    <span class="eggRadio"></span>
+                    <span class="eggRadio" for="ace"></span>
 
                 </section>
 
