Removed nonfunctioning css from buttons

--- a/ella-starter.html
+++ b/ella-starter.html
@@ -519,7 +519,7 @@
                 <h3>Pride Colors</h3>
                 <!--GAY-->
                 <section class="radio">
-                    Gay: <input type="radio" name="pride" id="gay" value="gay" checked="checked">
+                    Gay: <input type="radio" name="pride" id="gay" value="gay">
                     <span class="eggRadio" for="gay"></span>
                 </section>
                 <!--LESBIAN-->
