--- a/ella-starter.html
+++ b/ella-starter.html
@@ -506,9 +506,9 @@
                     <section class="sliders">
                         Reverb: <input type="range" id="delaySlider" min="0.0" max="1.0" value="0" step="0.1"> <span id="delayLabel">0</span>
                     </section>
-                    <!--BRIGHTNESS SLIDER-->
+                    <!--DISTORTION SLIDER-->
                     <section class="sliders">
-                        Distortion: <input type="range" id="distortSlider" min="0" max="1" value="0" step="0.01"> <span id="distortLabel">???</span>
+                        Distortion: <input type="range" id="distortSlider" min="0" max="100" value="0" id="distortionSlider"> <span id="distortLabel">0</span>
                     </section>
                 </section>
             </div>
